Insurance Agency Sfdc/force-app-main-default/objects/Applicant_Details__c/Applicant_Details__c.object-meta.xml
<CustomObject>
    <label>Applicant Details</label>
    <nameField>
        <displayFormat>APPID-{0000}</displayFormat>
        <label>Applicant Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>