Insurance Agency Sfdc/force-app-main-default/objects/Applicant_Details__c/fields/Active_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Active_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicant active status details</description>
    <label>Active Applicant</label>
    <type>Checkbox</type>
</CustomField>