Insurance Agency Sfdc/force-app-main-default/objects/Applicant_Details__c/fields/Asset_Products__c.field-meta.xml
<CustomField>
    <fullName>Asset_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Products</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Applicants Details</relationshipLabel>
    <relationshipName>Applicants_Details</relationshipName>
    <type>Lookup</type>
</CustomField>