Insurance Agency Sfdc/force-app-main-default/objects/Applicant_Details__c/fields/Driving_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Driving_Licence_Number__c</fullName>
    <label>Driving Licence Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>