Insurance Agency Sfdc/force-app-main-default/objects/Applicant_Details__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Applicant first name details</description>
    <label>First Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>