Insurance Agency Sfdc/force-app-main-default/objects/Applicant_Details__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Applicant last name details</description>
    <label>Last Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>