Insurance Agency Sfdc/force-app-main-default/objects/Applicant_Details__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>Applicant mobile number details</description>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>