Insurance Agency Sfdc/force-app-main-default/objects/Applicant_Details__c/validationRules/Prevent_Num_and_Sym_in_FN_LN_MN.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Num_and_Sym_in_FN_LN_MN</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( REGEX( First_Name__c , &quot;^[a-zA-Z]*$&quot;)), NOT(REGEX( Last_Name__c , &quot;^[a-zA-Z]*$&quot;)), NOT( REGEX( Middle_Name__c ,  &quot;^[a-zA-Z]*$&quot;)))</errorConditionFormula>
    <errorMessage>Number and Special Symbol is not allowed in first name, middle name,  last name</errorMessage>
</ValidationRule>